[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
flate2 = "1.0.30"
image = "0.24.7"
num-traits = "0.2.17"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.107"
tiff = "0.9.1"
